src/test/resources/tests/run-pass/typeck/implicit-return.rs
fn foo(a: int) -> int {
    a + 2
}

fn main() {
    let a = foo(4);

    println(a);
}