src/test/resources/tests/compile-fail/parser/invalid-expr.rs
fn a() -> int {
    retur 0  //! ERROR(2:11): expected one of `;`, `}`, found `0`
}